Add inventory script

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,10 @@ classifier =
 packages =
     shade_ansible
 
+[entry_points]
+console_scripts =
+    os-inventory = shade_ansible.inventory:main
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
