Update example to be nicer

--- a/example.yml
+++ b/example.yml
@@ -3,44 +3,55 @@
 - hosts: localhost
   connection: local
   gather_facts: False
+  vars:
+    cloud: mordred
+    volumes:
+    - name: foo
+      size: 5
+      mount: /mnt/foo
+    - name: bar
+      size: 10
+      mount: /mnt/bar
   tasks: 
   - name: Add Launch Keypair
     os_keypair:
-        cloud: mordred
+        cloud: "{{ cloud }}"
         name: "launch_keypair"
         public_key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
   - name: Add volume
     os_volume:
-        cloud: mordred
-        display_name: foo
-        size: 5
-        wait: true
+        cloud: "{{ cloud }}"
+        display_name: "{{ item.name }}"
+        size: "{{ item.size }}"
+    with_items: volumes
   - name: Launch Node
     os_compute:
-        cloud: mordred
+        cloud: "{{ cloud }}"
         name: "test-ansible"
         key_name: "launch_keypair"
         image_name: "Ubuntu Server 14.04.1 LTS (amd64 20140927) - Partner Image"
-        flavor_ram: 102
+        flavor_ram: 1024
         meta:
             group: "test-group"
     register: node
   - name: Wait for SSH to work
     wait_for: host={{ node.openstack.interface_ip }} port=22
     when: node.changed == True
-  - name: Attach volume
+  - name: Attach volumes
     os_compute_volume:
-        cloud: mordred
+        cloud: "{{ cloud }}"
         server_id: "{{ node.id }}"
-        volume_name: foo
-        wait: true
-    register: volume
-  - debug: var=volume
+        volume_name: "{{ item.name }}"
+    with_items: volumes
+  - name: Get updated server info
+    os_compute_facts:
+        cloud: "{{ cloud }}"
+        id: "{{ node.id }}"
   - name: Add all instance public IPs to host group
     add_host:
         hostname: "{{ node.openstack.interface_ip }}"
         groupname: added
-        openstack: "{{ volume.openstack }}"
+        openstack: "{{ openstack }}"
 - hosts: added
   gather_facts: False
   remote_user: ubuntu
@@ -50,7 +61,8 @@
   - name: Make filesystem
     filesystem:
         fstype: ext4 
-        dev: "{{ openstack.volumes[0]['attachments'][0]['device'] }}"
+        dev: "{{ item['attachments'][0]['device'] }}"
+    with_items: openstack.volumes
   - name: Mount volume
     mount:
         src: "{{ openstack.volumes[0]['attachments'][0]['device'] }}"
